# rewind

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy-docs.yml
capture-agent/: CMakeLists.txt
capture-agent/src/: Capturer.cpp  Capturer.h  HttpMessage.cpp  HttpMessage.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  main.cpp
docs/: DEPLOYMENT_SETUP.md  DEVELOPER_GUIDE.md  EMAIL_ALERT_SYSTEM_COMPLETE.md  EMAIL_SETUP_GUIDE.md  README.md  USER_GUIDE.md  index.md  package.json
docs/.vitepress/: config.js
services/backend-api/: .env.example  .gitignore  README.md  package.json  tsconfig.json
services/backend-api/scripts/: generate-ethereal-config.ts  test-email.ts
services/backend-api/src/: index.ts
services/backend-api/src/models/: AlertRule.ts  Notification.ts  Session.ts
services/backend-api/src/routes/: alerts.ts  capture.ts  metrics.ts  notifications.ts  realtime.ts  sessions.ts
services/backend-api/src/services/: alertService.ts  captureManager.ts  emailNotificationService.ts  fileStorage.ts  mongoStorage.ts  realtimeWatcher.ts
services/backend-api/src/types/: session.ts
services/capture-agent/: CMakeLists.txt  METRICS.md  README.md  build.bat
services/capture-agent/config/: config.yaml  config.yaml.example
services/capture-agent/include/rewind/capture/: Capturer.h  Session.h  SessionManager.h
services/capture-agent/include/rewind/config/: Config.h
services/capture-agent/include/rewind/metrics/: MetricsServer.h
services/capture-agent/include/rewind/parsers/: HttpMessage.h
services/capture-agent/include/rewind/sanitizers/: PIISanitizer.h
services/capture-agent/src/: main.cpp
services/capture-agent/src/capture/: Capturer.cpp  Session.cpp  SessionManager.cpp
services/capture-agent/src/config/: Config.cpp
services/capture-agent/src/metrics/: MetricsServer.cpp
services/capture-agent/src/parsers/: HttpMessage.cpp
services/capture-agent/src/sanitizers/: PIISanitizer.cpp
services/frontend/: .env.example  README.md  package.json  tailwind.config.js
services/frontend/src/: app.css
services/frontend/src/lib/: api-capture.ts  api.ts  client.ts  export.ts  httpClient.ts  queries.ts  realtime.ts  types.ts  utils.ts
services/frontend/src/lib/components/: CaptureControls.svelte  CaptureTerminal.svelte  CreateAlertModal.svelte  EnhancedHeadersViewer.svelte  FormattedBody.svelte  HttpViewer.svelte  LiveMetrics.svelte  NotificationBell.svelte  QueryParamsAndCookies.svelte  RequestReplay.svelte
services/frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  EmptyState.svelte  ErrorState.svelte  Input.svelte  LoadingSpinner.svelte  LoadingState.svelte  Modal.svelte  Select.svelte  StatCard.svelte  index.ts
services/frontend/src/lib/stores/: terminalStore.ts
services/frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
services/frontend/src/routes/(dashboard)/: +layout.svelte  +page.svelte
services/frontend/src/routes/(dashboard)/alerts/: +page.svelte
services/frontend/src/routes/metrics/: +page.svelte
services/frontend/src/routes/stats/: +page.svelte  +page.ts
(+5 files in other folders)
